test(android): use Files.write for API 26 compatibility in session key test
Co-authored-by: Martin DONADIEU <martindonadieu@gmail.com>